--- a/viselica/index.html
+++ b/viselica/index.html
@@ -18,7 +18,7 @@ var ctx = canvas.getContext("2d");
 
 var pickWord = function(){
     words = [
-        "программа",
+        "програdмма",
         "маккака",
         "прекрасный",
         "оладушек",
