three commit for JS Child

--- a/viselica/index.html
+++ b/viselica/index.html
@@ -22,7 +22,7 @@ var pickWord = function(){
         "маккака",
         "прекрасный",
         "оладушек",
-        "программист"
+        "программиhghgст"
     ];
    return words[Math.floor(Math.random() * words.length)]; 
 };
